--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-  <!-- Metadata Section -->
+  <!-- Metadata -->
   <meta charset="UTF-8">
   <meta name="author" content="Wilder Serna">
-  <meta name="description"
-    content="Ofrecemos asesoría, reparación y venta de relojes clásicos, modernos e inteligentes con repuestos originales y servicio profesional.">
-  <meta name="keywords"
-    content="reparación de relojes, venta de relojes, accesorios para relojes, repuestos de relojes, relojes inteligentes, relojes mecánicos, relojes de lujo, servicio técnico de relojes, Medellín, Antioquia">
+  <meta name="description" content="Asesoría, reparación y venta de relojes clásicos, modernos e inteligentes.">
+  <meta name="keywords" content="relojes, reparación, venta, accesorios, repuestos, Medellín, servicio técnico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Tab icon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/store.png">
+  <!-- Icono de pestaña -->
+  <link rel="shortcut icon" href="/store.png" type="image/x-icon">
 
-  <!-- Page title -->
+  <!-- Título de la página -->
   <title>Final Project | Inicio</title>
 
-  <!-- Bootstrap CSS (una sola vez) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+    crossorigin="anonymous" />
 
-  <!-- Bootstrap Icons (una sola vez) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  <!-- Google Fonts unificado -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;500&display=swap"
+    rel="stylesheet">
 
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <!-- Estilos propios -->
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div id="root"></div>
+
+  <!-- App Principal -->
   <script type="module" src="/src/main.jsx"></script>
 
-
-  <!-- Bootstrap JS (solo bundle que incluye Popper) -->
+  <!-- Bootstrap JS (con Popper incluido) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
 
-  <!-- Swiper JS -->
+  <!-- Swiper JS (solo uno es necesario) -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
 
 </html>
